menu section done

--- a/index.html
+++ b/index.html
@@ -5,8 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Travelx</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Header Section Starts -->
+    <header>
+        <nav class="nav">
+            <div class="logo">
+                <img src="images/logo.png" alt="">
+                <h3 class="navH">Travelx</h3>    
+            </div>
+            <div class="menu">
+                <li><a href="">Destinations</a></li>
+                <li><a href="">Activities</a></li>
+                <li><a href="">About Us</a></li>
+                <li><a href="">Contact</a></li>
+            </div>
+        </nav>
+    </header>
     
+    <!-- Header Section Ends -->
 </body>
 </html>
