Hero Info Section Done

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
                 <li><a href="">Contact</a></li>
             </div>
         </nav>
+        <div id="hero-info">
+            <h3 class="info1">EXPLORE</h3>
+            <H1 class="info2">NORWAY</H1>
+        </div>
     </header>
     
     <!-- Header Section Ends -->
