hero botton half done

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 <body>
     <!-- Header Section Starts -->
     <header>
+        <!-- Menu Section Start -->
         <nav class="nav">
             <div class="logo">
-                <img src="images/logo.png" alt="">
+                <img src="images/logo.png" alt="logo">
                 <h3 class="navH">Travelx</h3>    
             </div>
             <div class="menu">
@@ -22,10 +23,53 @@
                 <li><a href="">Contact</a></li>
             </div>
         </nav>
+        <!-- Menu Section Ends -->
+
+        <!-- Hero Info Section Starts -->
         <div id="hero-info">
             <h3 class="info1">EXPLORE</h3>
             <H1 class="info2">NORWAY</H1>
         </div>
+        <!-- Hero Info Section Ends -->
+
+        <!-- Hero Bottom Section Starts -->
+        <div id="main">
+            <div class="div1 locateDiv">
+                <div class="mapDiv">
+                    <div class="locate-img">
+                        <img src="images/map.png" alt="map">
+                    </div>
+                    <div>
+                        <h1>Trondheim</h1>
+                        <h3  class="mapInfo">Plan A Trip</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="div2 locateDiv">
+                <div class="mapDiv">
+                    <div class="locate-img">
+                        <img src="images/map.png" alt="map">
+                    </div>
+                    <div>
+                        <h1>Trondheim</h1>
+                        <h3  class="mapInfo">Plan A Trip</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="div3 locateDiv">
+                <div class="mapDiv">
+                    <div class="locate-img">
+                        <img src="images/map.png" alt="map">
+                    </div>
+                    <div>
+                        <h1>Trondheim</h1>
+                        <h3  class="mapInfo">Plan A Trip</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Hero Bottom Section Ends -->
+
     </header>
     
     <!-- Header Section Ends -->
