Hero bottom color fixed

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!-- Header Section Starts -->
-    <header>
+    <header class="header">
         <!-- Menu Section Start -->
         <nav class="nav">
             <div class="logo">
@@ -71,7 +71,14 @@
         <!-- Hero Bottom Section Ends -->
 
     </header>
-    
     <!-- Header Section Ends -->
+
+    <!-- Activities For Everyone Section Starts -->
+    <section>
+        <div>
+            <h4>HUNDREDS OF</h4>
+        </div>
+    </section>
+    <!-- Activities For Everyone Section Ends -->
 </body>
 </html>
