Activities For Everyone Section Ends and learned how to center a text and div

--- a/index.html
+++ b/index.html
@@ -75,8 +75,15 @@
 
     <!-- Activities For Everyone Section Starts -->
     <section>
-        <div>
+        <div class="hundred-div">
             <h4>HUNDREDS OF</h4>
+            <h1>Activities for Everyone</h1>
+        </div>
+        <div id="all-images">
+            <img src="images/Activity 1.png" alt="" class="img">
+            <img src="images/Activity 2.png" alt="" class="img">
+            <img src="images/Activity 3.png" alt="" class="img">
+            <img src="images/Activity 4.png" alt="" class="img">
         </div>
     </section>
     <!-- Activities For Everyone Section Ends -->
