Our Philosophy section starts

--- a/index.html
+++ b/index.html
@@ -87,5 +87,9 @@
         </div>
     </section>
     <!-- Activities For Everyone Section Ends -->
+
+    <!-- Our Philosophy Section Starts -->
+    
+    <!-- Our Philosophy Section Ends -->
 </body>
 </html>
