Our Philosophy Section done

--- a/index.html
+++ b/index.html
@@ -89,7 +89,50 @@
     <!-- Activities For Everyone Section Ends -->
 
     <!-- Our Philosophy Section Starts -->
-    
+    <section>
+        <div id="third">
+            <div class="third-title">
+                <h4>About Us</h4>
+                <h1>Our Philosophy</h1>
+            </div>
+            <!-- <div id="main-area"> -->
+                <div id="info-container">
+                    <div>
+                        <img src="images/About US.png" alt=""  class="info-img">
+                    </div>
+                    <div class="all-infos">
+                        <div class="informations">
+                            <div class="info">
+                                <div class="info-sl"><h4>01</h4></div>
+                                <div class="info-about">
+                                    <h2>Sustainable</h2>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi et nisl hendrerit, aliquet mi sed, scelerisque tortor. Aliquam eu scelerisque quam, ac tristique dolor. Aliquam nulla risus,</p>
+                                </div>
+                            </div>
+                            <div class="info">
+                                <div class="info-sl"><h4>02</h4></div>
+                                <div class="info-about">
+                                    <h2>Fair & Share</h2>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi et nisl hendrerit, aliquet mi sed, scelerisque tortor. Aliquam eu scelerisque quam, ac tristique dolor. Aliquam nulla risus,</p>
+                                </div>
+                            </div>
+                            <div class="info">
+                                <div class="info-sl"><h4>03</h4></div>
+                                <div class="info-about">
+                                    <h2>Experience</h2>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi et nisl hendrerit, aliquet mi sed, scelerisque tortor. Aliquam eu scelerisque quam, ac tristique dolor. Aliquam nulla risus,</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            <!-- </div> -->
+        </div>
+    </section>
     <!-- Our Philosophy Section Ends -->
+
+    <!-- Hotels and Apartments Starts -->
+    
+    <!-- Hotels and Apartments Starts -->
 </body>
 </html>
