Hotels and Apartments half done

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Travelx</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://kit.fontawesome.com/a8e2726981.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <!-- Header Section Starts -->
@@ -132,7 +133,70 @@
     <!-- Our Philosophy Section Ends -->
 
     <!-- Hotels and Apartments Starts -->
-    
+        <section>
+            <div class="third-title">
+                <h4>BEAUTIES</h4>
+                <h1>Hotels and Apartments</h1>
+            </div>
+            <div id="main-three-countries">
+                <div class="countries">
+                    <div class="c-img">
+                        <img src="images/Hotel 1.png" alt="">
+                    </div>
+                    <div class="c-title-star">
+                        <h1>Reine</h1>
+                        <span class="stars">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                        </span>
+                    </div>
+                    <div>
+                        <h3>$720</h3>
+                    </div>
+                </div>
+
+                <div class="countries">
+                    <div class="c-img">
+                        <img src="images/Hotel 1.png" alt="">
+                    </div>
+                    <div class="c-title-star">
+                        <h1>Reine</h1>
+                        <span class="stars">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                        </span>
+                    </div>
+                    <div>
+                        <h3>$720</h3>
+                    </div>
+                </div>
+
+                <div class="countries">
+                    <div class="c-img">
+                        <img src="images/Hotel 1.png" alt="">
+                    </div>
+                    <div class="c-title-star">
+                        <h1>Reine</h1>
+                        <span class="stars">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                        </span>
+                    </div>
+                    <div>
+                        <h3>$720</h3>
+                    </div>
+                </div>
+            </div>
+        </section>
     <!-- Hotels and Apartments Starts -->
 </body>
 </html>
