Hotels and Apertmant Section Done

--- a/index.html
+++ b/index.html
@@ -146,52 +146,52 @@
                     <div class="c-title-star">
                         <h1>Reine</h1>
                         <span class="stars">
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-regular fa-star"></i>
+                            <i class="fa-solid fa-star five-star"></i>
+                            <i class="fa-solid fa-star five-star"></i>
+                            <i class="fa-solid fa-star five-star"></i>
+                            <i class="fa-solid fa-star five-star"></i>
+                            <i class="fa-solid fa-star five-star"></i>
                         </span>
                     </div>
-                    <div>
+                    <div  class="price">
                         <h3>$720</h3>
                     </div>
                 </div>
 
                 <div class="countries">
                     <div class="c-img">
-                        <img src="images/Hotel 1.png" alt="">
+                        <img src="images/Hotel 2.png" alt="">
                     </div>
                     <div class="c-title-star">
                         <h1>Reine</h1>
                         <span class="stars">
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star five-star"></i>
+                            <i class="fa-solid fa-star five-star"></i>
+                            <i class="fa-solid fa-star five-star"></i>
+                            <i class="fa-solid fa-star five-star"></i>
                             <i class="fa-regular fa-star"></i>
                         </span>
                     </div>
-                    <div>
+                    <div class="price">
                         <h3>$720</h3>
                     </div>
                 </div>
 
                 <div class="countries">
                     <div class="c-img">
-                        <img src="images/Hotel 1.png" alt="">
+                        <img src="images/Hotel 3.png" alt="">
                     </div>
                     <div class="c-title-star">
                         <h1>Reine</h1>
                         <span class="stars">
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star five-star"></i>
+                            <i class="fa-solid fa-star five-star"></i>
+                            <i class="fa-solid fa-star five-star"></i>
+                            <i class="fa-regular fa-star"></i>
                             <i class="fa-regular fa-star"></i>
                         </span>
                     </div>
-                    <div>
+                    <div class="price">
                         <h3>$720</h3>
                     </div>
                 </div>
