Our Partner Section Done

--- a/index.html
+++ b/index.html
@@ -198,5 +198,20 @@
             </div>
         </section>
     <!-- Hotels and Apartments Starts -->
+
+    <!-- Our Partners Section Starts -->
+        <section>
+            <div class="third-title">
+                <h4>NETWORK</h4>
+                <h1>Our Partners</h1>
+            </div>
+            <div id="all-partners">
+                <img src="images/Partner 1.png" alt="">
+                <img src="images/Partner 2.png" alt="">
+                <img src="images/Partner 3.png" alt="">
+                <img src="images/Partner 4.png" alt="">
+            </div>
+        </section>
+    <!-- Our Partners Section Ends -->
 </body>
 </html>
