Testimonial Section Done

--- a/index.html
+++ b/index.html
@@ -213,5 +213,69 @@
             </div>
         </section>
     <!-- Our Partners Section Ends -->
+
+    <!-- Testimonial Section Starts -->
+        <section class="sec-bg">
+            <div id="all-reviews">
+                <div class="reviews">
+                    <div class="reviews-info">
+                        <div class="quote">
+                            <i class="fa-solid fa-quote-left quotes"></i>
+                        </div>
+                        <div class="review-detail">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Auctor neque sed imperdiet nibh lectus feugiat nunc sem. consectetur adipiscing elit. nibh lectus feugiat nunc </p>
+                        </div>
+                    </div>
+                    <div class="review-person">
+                        <div class="review-person-img">
+                            <img src="images/author 1.png" alt="">
+                        </div>
+                        <div class="person-detail">
+                            <h3>Alan Jackson</h3>
+                            <h5>CEO, Travelers Community </h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="reviews">
+                    <div class="reviews-info">
+                        <div class="quote">
+                            <i class="fa-solid fa-quote-left quotes"></i>
+                        </div>
+                        <div class="review-detail">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Auctor neque sed imperdiet nibh lectus feugiat nunc sem. consectetur adipiscing elit. nibh lectus feugiat nunc </p>
+                        </div>
+                    </div>
+                    <div class="review-person">
+                        <div class="review-person-img">
+                            <img src="images/author 2.png" alt="">
+                        </div>
+                        <div class="person-detail">
+                            <h3>Jane Coper</h3>
+                            <h5>CEO, ABC Corporation</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="reviews">
+                    <div class="reviews-info">
+                        <div class="quote">
+                            <i class="fa-solid fa-quote-left quotes"></i>
+                        </div>
+                        <div class="review-detail">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Auctor neque sed imperdiet nibh lectus feugiat nunc sem. consectetur adipiscing elit. nibh lectus feugiat nunc </p>
+                        </div>
+                    </div>
+                    <div class="review-person">
+                        <div class="review-person-img">
+                            <img src="images/author 3.png" alt="">
+                        </div>
+                        <div class="person-detail">
+                            <h3>Justin Mathew</h3>
+                            <h5>CEO, Clerk tech Co.</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    <!-- Testimonial Section Ends -->
 </body>
 </html>
