footer section done

--- a/index.html
+++ b/index.html
@@ -277,5 +277,21 @@
             </div>
         </section>
     <!-- Testimonial Section Ends -->
+
+    <!-- Footer Section Starts -->
+        <div class="footer-logo">
+            <div>
+                <img class="last-logo" src="images/logo.png" alt="">
+                <h1>Designed By <a class="link" href="https://faazizpro.com" target="_blank">faazizpro.com</a></h1>
+                <div class="navigation">
+                    <h3>Destination</h3>
+                    <h3>Activities</h3>
+                    <h3>About Us</h3>
+                    <h3>Contact</h3>
+                    <h3>Privacy Policy</h3>
+                </div>
+            </div>
+        </div>
+    <!-- Footer Section Ends -->
 </body>
 </html>
